--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -18,6 +18,7 @@ html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
 .pushright li{margin-right:20px;}
 .pushright li:last-child{margin-right:0;}
 .borderedbox{border:1px solid;}
+.borderedbox_quotes{border:1px solid;padding:2px 2px 2px 2px;}
 .overlay{position:relative; z-index:1;}
 .overlay::after{display:block; position:absolute; top:0; left:0; width:100%; height:100%; content:""; z-index:-1;}
 .cover_overlay{position:relative; z-index:1;}
@@ -57,6 +58,10 @@ h4, .heading_h4{font-family: 'Pangolin', cursive;}
 h5, .heading_h5{font-family: 'Pangolin', cursive;}
 h6, .heading_h6{font-family: 'Pangolin', cursive;}
 
+.font_size_24{font-family: 'Pangolin', cursive;}
+.font_size_30{font-family: 'Pangolin', cursive;}
+.font_size_32{font-family: 'Pangolin', cursive;}
+
 
 /* Forms
 --------------------------------------------------------------------------------------------------------------- */
@@ -76,8 +81,15 @@ h4, .heading_h4{margin:0 0 20px 0; font-size:16px; line-height:normal; font-weig
 h5, .heading_h5{margin:0 0 20px 0; font-size:12px; line-height:normal; font-weight:normal;color:#8A0C0C;}
 h6, .heading_h6{margin:0 0 20px 0; font-size:11px; line-height:normal; font-weight:normal;color:#8A0C0C;}
 
+.font_size_32{margin:0 0 0px 0; font-size:32px; line-height:normal; font-weight:normal;color:#8A0C0C;}
+.font_size_30{margin:0 0 0px 0; font-size:30px; line-height:normal; font-weight:normal;}
+.font_size_24{margin:0 0 0px 0; font-size:24px; line-height:normal; font-weight:normal;}
+
+
 address{font-style:normal; font-weight:normal;}
 hr{display:block; width:100%; height:1px; border:solid; border-width:1px 0 0 0;}
+.quotes_main{display:block; width:95%; height:1px; border:solid; border-width:1px 0 0 0;}
+.quotes_about{display:block; width:90%; height:1px; border:solid; border-width:1px 0 0 0;}
 
 .font-xs{font-size:.8rem;}
 .font-x1{font-size:1.2rem;}
