Changes for Drawing with A and B page

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -112,6 +112,7 @@
 ---------------------------------------------------------------------------------------------------------------*/
 
 .font_size_24{font-family: 'Pangolin', cursive;}
+.font_size_20{font-family: 'Pangolin', cursive;}
 
 
 /* Footer
