--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -19,6 +19,7 @@ html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
 .pushright li:last-child{margin-right:0;}
 .borderedbox{border:1px solid;}
 .borderedbox_quotes{border:1px solid;padding:2px 2px 2px 2px;}
+.borderedbox_videotutorial{border:1px solid;padding:20px 20px 20px 20px;}
 .overlay{position:relative; z-index:1;}
 .overlay::after{display:block; position:absolute; top:0; left:0; width:100%; height:100%; content:""; z-index:-1;}
 .cover_overlay{position:relative; z-index:1;}
@@ -60,9 +61,9 @@ h5, .heading_h5{font-family: 'Pangolin', cursive;}
 h6, .heading_h6{font-family: 'Pangolin', cursive;}
 
 .font_size_24{font-family: 'Pangolin', cursive;}
+.font_size_20{font-family: 'Pangolin', cursive;}
 .font_size_30{font-family: 'Pangolin', cursive;}
 .font_size_32{font-family: 'Pangolin', cursive;}
-
 
 /* Forms
 --------------------------------------------------------------------------------------------------------------- */
@@ -86,6 +87,7 @@ h6, .heading_h6{margin:0 0 20px 0; font-size:11px; line-height:normal; font-weig
 .font_size_32{margin:0 0 0px 0; font-size:32px; line-height:normal; font-weight:normal;color:#8A0C0C;}
 .font_size_30{margin:0 0 0px 0; font-size:30px; line-height:normal; font-weight:normal;}
 .font_size_24{margin:0 0 0px 0; font-size:24px; line-height:normal; font-weight:normal;}
+.font_size_20{margin:0 0 0px 0; font-size:20px; line-height:normal; font-weight:normal;}
 
 
 address{font-style:normal; font-weight:normal;}
