Adding final Layout for shop

--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -468,7 +468,8 @@ table a, #comments a{background-color:inherit;}
 }
 
 
-
+ul.KeyFeature {list-style-type: square;margin: 15px;}
+ul.ProductDetails {list-style-type: circle; margin: 15px;}
 
 a.post-share {
     display: block;
