--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -529,3 +529,9 @@ a.post-share.stumble {
 a.post-share.stumble span {
     background-color: #fd5d3b;
 }
+
+a.category {
+    font:"Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+    color: #000000;
+}
+
