--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -8,6 +8,7 @@ html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
 .bold{font-weight:bold;}
 .center{text-align:center;}
 .right{text-align:right;}
+.left{text-align:left;}
 .uppercase{text-transform:uppercase;}
 .capitalise{text-transform:capitalize;}
 .hidden{display:none;}
